# cpp-interpreter

./: CMakeLists.txt  README.md  grammar.txt  main.cpp  program.txt
include/: any.h  datatype.h  eval-tree.h  eval_tree.h  kv.h  lexical.h  lexical_analyser.h  lr1-parser.h  predictor-parser.h  statements-group.h  val.h
lib/: libanalysers.dylib
src/: any.cpp  datatype.cpp  eval-tree.cpp  eval_tree.cpp  kv.cpp  lexical.cpp  lexical_analyser.cpp  lr1-parser.cpp  predictor-parser.cpp  statements-group.cpp  val.cpp
